# hitsigst

./: .dockerignore  Cargo.toml  Dockerfile  README.md  fly.toml  upload_to_r2.sh
.sqlx/: query-1a83851daaa8af205c758ebbb44a46e1d758cb1c96e5582b90e6e108f74995db.json
hitrelease-cli/: Cargo.toml
hitrelease-cli/src/: main.rs  prepare.rs  template.typ  typst.rs
hitrelease-server/: Cargo.toml
hitrelease-server/src/: main.rs  upload.rs
hitrelease-server/templates/: base.html  index.html  player.html
hitrelease-util/: Cargo.toml
hitrelease-util/src/: lib.rs  models.rs  store.rs
hitrelease-worker/: Cargo.toml
hitsigst-cli/: Cargo.toml
hitsigst-cli/src/: main.rs  prepare.rs  typst.rs
hitsigst-server/: Cargo.toml
hitsigst-server/src/: main.rs
hitsigst-server/templates/: base.html  index.html  player.html
hitsigst-util/: Cargo.toml
hitsigst-util/src/: models.rs
migrations/: 20241120220801_initial.sql
src/: main.rs
templates/: player.html  upload.html
