[package]
name = "hitrelease-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
csv = "1.3.1"
hitrelease-util = { path = "../hitrelease-util" }
indicatif = { version = "0.17.9", features = ["rayon"] }
rayon = "1.10.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
twox-hash = "2.0.1"
