[package]
name = "hitrelease-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
aws-config = "1.5.10"
aws-sdk-s3 = "1.61.0"
axum = { version = "0.7.9", features = ["multipart"] }
bytes = "1.8.0"
hitrelease-util = { path = "../hitrelease-util" }
image = { version = "0.25.5", default-features = false, features = ["png"] }
qrcode = "0.14.1"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio", "macros", "chrono"] }
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.11.0", features = ["v4"] }
