[package]
name = "hitrelease-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.9", features = ["multipart"] }
bytes = "1.8.0"
hitrelease-util = { path = "../hitrelease-util" }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
